GNOME Bugzilla – Bug 597668
[Moblin] Fix embedding in the Moblin toolbar
Last modified: 2009-10-07 11:22:29 UTC
The MplPanelGtk is not actually a GtkWidget, we need to get the panels window and populate that with our UI rather than trying to add widgets to the MplPanelGtk object directly.
Created attachment 144947 [details] [review] [Moblin] Fix embedding in the Moblin toolbar