Fix embedding in the Moblin toolbar

The MplPanelGtk is not actually a GtkWidget, we need to get the panels
window and populate that with our UI rather than trying to add widgets to
the MplPanelGtk object directly.

https://bugzilla.gnome.org/show_bug.cgi?id=597668